# motion

./: CMakeLists.txt  Cairomotion.cpp  Cairomotion.h  Drawings.cpp  Drawings.h  History.cpp  History.h  MotionApp.cpp  MotionApp.h  Placeholder.cpp  Placeholder.h  PopupBar.cpp  PopupBar.h  README.md  main.cpp
ui/: Canvas.cpp  Canvas.h  CanvasContainer.cpp  CanvasContainer.h  ColorList.cpp  ColorList.h  ColorPicker.cpp  ColorPicker.h  CurrentColor.cpp  CurrentColor.h  FileOperation.cpp  FileOperation.h  PopupBar.cpp  PopupBar.h  ScrolledWidget.cpp  ScrolledWidget.h  Timeline.cpp  Timeline.h  Tools.cpp  Tools.h
